@@ -1,57 +1,53 @@
 package com.jeesite.modules.cat.service.cg;
 
-import com.alibaba.fastjson.JSONObject;
 import com.fasterxml.jackson.core.type.TypeReference;
-import com.google.common.collect.Lists;
+import com.jeesite.common.codec.EncodeUtils;
 import com.jeesite.common.lang.StringUtils;
 import com.jeesite.common.utils.DateTimeUtils;
 import com.jeesite.common.utils.JsonUtils;
 import com.jeesite.modules.cat.cache.CacheService;
 import com.jeesite.modules.cat.dao.MaocheAlimamaUnionProductDao;
 import com.jeesite.modules.cat.dao.MaocheDataokeProductDao;
-import com.jeesite.modules.cat.entity.MaocheAlimamaUnionGoodPriceDO;
-import com.jeesite.modules.cat.entity.MaocheAlimamaUnionProductDO;
 import com.jeesite.modules.cat.entity.MaocheCategoryMappingDO;
-import com.jeesite.modules.cat.entity.MaocheDataokeProductDO;
+import com.jeesite.modules.cat.entity.QwChatroomInfoDO;
 import com.jeesite.modules.cat.enums.AuditStatusEnum;
 import com.jeesite.modules.cat.enums.CatActivityEnum;
-import com.jeesite.modules.cat.enums.ElasticSearchIndexEnum;
-import com.jeesite.modules.cat.enums.ProductDataSource;
 import com.jeesite.modules.cat.enums.SaleStatusEnum;
 import com.jeesite.modules.cat.es.config.es7.ElasticSearch7Service;
 import com.jeesite.modules.cat.es.config.model.ElasticSearchData;
-import com.jeesite.modules.cat.helper.CatRobotHelper;
-import com.jeesite.modules.cat.helper.ProductValueHelper;
-import com.jeesite.modules.cat.helper.dataoke.DaTaoKeResponseHelper;
+import com.jeesite.modules.cat.helper.PriceHelper;
 import com.jeesite.modules.cat.model.CarAlimamaUnionProductIndex;
 import com.jeesite.modules.cat.model.CatProductBucketTO;
 import com.jeesite.modules.cat.model.CatUnionProductCondition;
-import com.jeesite.modules.cat.model.dataoke.DaTaoKeResponse;
 import com.jeesite.modules.cat.service.MaocheAlimamaUnionGoodPriceService;
 import com.jeesite.modules.cat.service.MaocheAlimamaUnionProductService;
 import com.jeesite.modules.cat.service.MaocheCategoryMappingService;
 import com.jeesite.modules.cat.service.MaocheSenderTaskService;
+import com.jeesite.modules.cat.service.QwChatroomInfoService;
+import com.jeesite.modules.cat.service.helper.ProductSearchHelper;
 import com.jeesite.modules.cat.service.message.QwService;
+import lombok.Data;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.collections.CollectionUtils;
 import org.elasticsearch.index.query.BoolQueryBuilder;
 import org.elasticsearch.index.query.QueryBuilders;
+import org.elasticsearch.index.query.RangeQueryBuilder;
 import org.elasticsearch.search.builder.SearchSourceBuilder;
 import org.springframework.scheduling.annotation.EnableScheduling;
 import org.springframework.stereotype.Component;
 
 import javax.annotation.Resource;
+import java.io.Serial;
+import java.io.Serializable;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.time.LocalTime;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -89,131 +85,28 @@ public class CgUnionProductStatisticsService {
     @Resource
     private MaocheAlimamaUnionGoodPriceService maocheAlimamaUnionGoodPriceService;
 
+    @Resource
+    private QwChatroomInfoService qwChatroomInfoService;
+
     private static final String UNIQUE_ID = "3dd41c9e0df2aab04cb8f1c1afc359b8.py";
 
     @Resource
     private QwService qwService;
 
-    // todo 任务间隔30分钟
-//    @Scheduled(cron = "0 50 7,10,18 * * ?")
-    public String runJob() {
-        // 判断是否执行，以及更新的内容
-        // 获取当前时间
-        int hour = LocalTime.now().getHour();
-
-        // TODO
-//        Map<Integer, Long> idMap = new HashMap<>();
-//        idMap.put(7, 1L);
-//        idMap.put(10, 1L);
-//        idMap.put(18, 1L);
-//        if (!idMap.containsKey(hour)) {
-//            return;
-//        }
-//        Long id = idMap.get(hour);
-        statistics2();
-
-        return "success";
-    }
-
     // 每日统计
-    public String statistics() {
-        // 时间，选品库，
-        // 时间，选品库，有好价 + top2 catDsr
-
-        /**
-         【早安】，送上今日猫车精选播报：
-
-         今日在库商品：32564件，上架商品：1543件
-
-         今日历史低价商品精选：
-
-         （凑单可227元）比乐猫粮全价无谷猫粮10kg，券后 259， (1QPqdrTpwjg)/ HU89
-         （凑单可227元）比乐猫粮全价无谷猫粮10kg，券后 259， (1QPqdrTpwjg)/ HU89
-         （凑单可227元）比乐猫粮全价无谷猫粮10kg，券后 259， (1QPqdrTpwjg)/ HU89
-
-         今日新上架金选商品：
-
-         （凑单可227元）比乐猫粮全价无谷猫粮10kg，券后 259， (1QPqdrTpwjg)/ HU89
-         （凑单可227元）比乐猫粮全价无谷猫粮10kg，券后 259， (1QPqdrTpwjg)/ HU89
-         （凑单可227元）比乐猫粮全价无谷猫粮10kg，券后 259， (1QPqdrTpwjg)/ HU89
-
-
-         更多好物，欢迎群内@猫车选品官，带上关键词即可。
-         找券/答疑@猫车小助手
-         */
-        int passStatus = AuditStatusEnum.PASS.getStatus();
-        long saleStatus = SaleStatusEnum.ON_SHELF.getStatus();
-
-        // 在库商品数
-        long passProductNum = 0;
-        long saleProductNum = 0;
-
-        CatUnionProductCondition condition = new CatUnionProductCondition();
-        condition.setAuditStatus(passStatus);
-        // 获取总数量
-        ElasticSearchData<CarAlimamaUnionProductIndex, CatProductBucketTO> searchData = cgUnionProductService.searchProduct(condition,
-                null,
-                0,
-                0);
-
-        // 上架商品数
-        if (searchData == null) {
-            return null;
-        }
-
-        passProductNum = searchData.getTotal();
-        condition.setSaleStatus(saleStatus);
-        // 获取总数量
-        searchData = cgUnionProductService.searchProduct(condition,
-                null,
-                0,
-                0);
-
-        if (searchData != null) {
-            saleProductNum = searchData.getTotal();
-        }
-
-        StringBuilder builder = new StringBuilder();
-        String hi = sayHi();
-
-
-        builder.append("【").append(hi).append("】，送上今日猫车精选播报：\n");
-        builder.append("今日在库商品：").append(passProductNum).append("，上架商品：").append(saleProductNum).append("\n");
-
-        // 金选
-        List<String> historyLowPriceList = getHistoryLowPriceList();
-        if (CollectionUtils.isNotEmpty(historyLowPriceList)) {
-            builder.append("今日历史低价商品精选：\n");
-            for (String msg : historyLowPriceList) {
-                builder.append(msg).append("\n");
-            }
-        }
-
-        // 今日上架精选
-        List<String> todayNew = todayNew();
-        if (CollectionUtils.isNotEmpty(todayNew)) {
-            builder.append("今日新上架金选商品：\n");
-            for (String msg : todayNew) {
-                builder.append(msg).append("\n");
-            }
-        }
-
-        return builder.toString();
-    }
-
-    // 每日统计
-    public void statistics2() {
+    public void statistics() {
 
         List<MaocheCategoryMappingDO> roots = maocheCategoryMappingService.getCategoryFromCache(0L);
 
-        int passStatus = AuditStatusEnum.PASS.getStatus();
-        long saleStatus = SaleStatusEnum.ON_SHELF.getStatus();
-        List<String> sorts = Collections.singletonList("catDsr desc");
+        List<String> sorts = new ArrayList<>(Collections.singletonList("catDsr desc"));
+        sorts.add("updateTime desc");
         List<String> activity = Collections.singletonList(CatActivityEnum.GOOD_PRICE.getActivity());
 
-        String titleFormat = "今日%s好价：";
         // 每段文案
-        List<String> stepList = new ArrayList<>();
+        long starTime = DateTimeUtils.earliestTimeToday(System.currentTimeMillis());
+        List<Content> contents = new ArrayList<>();
+
+        Long nDay = 86400L * 3L * 1000L;
 
         for (MaocheCategoryMappingDO mappingDO : roots) {
             List<MaocheCategoryMappingDO> subCategories = maocheCategoryMappingService.getCategoryFromCache(mappingDO.getIid());
@@ -225,9 +118,15 @@ public class CgUnionProductStatisticsService {
             CatUnionProductCondition categoryCondition = new CatUnionProductCondition();
             categoryCondition.setCategoryNames(categoryNames);
             categoryCondition.setActivity(activity);
+            categoryCondition.setAuditStatus(AuditStatusEnum.PASS.getStatus());
+            categoryCondition.setHadRates(true);
             categoryCondition.setGteShopDsr(48000);
-//            categoryCondition.setSaleStatus(saleStatus);
-            String key = "daily_push_filter_ids_" + mappingDO.getId();
+            // 5%
+            categoryCondition.setGteCommissionRate(500L);
+            categoryCondition.setGteCouponRemainCount(1L);
+            // todo
+            categoryCondition.setGteUpdateTime(System.currentTimeMillis() - nDay);
+            String key = "daily_good_product_filter_ids_" + mappingDO.getId();
             String filterIdsStr = cacheService.get(key);
             List<Long> filterIds = new ArrayList<>();
             if (StringUtils.isNotBlank(filterIdsStr)) {
@@ -243,6 +142,7 @@ public class CgUnionProductStatisticsService {
             if (searchData == null) {
                 // 重置redis
                 categoryCondition.setFilterIds(null);
+                categoryCondition.setGteUpdateTime(null);
                 source = cgUnionProductService.searchSource(categoryCondition, null, cgUnionProductService::commonSort, null, 0, 3);
                 searchData = cgUnionProductService.search(source);
                 if (searchData != null && CollectionUtils.isNotEmpty(searchData.getDocuments())) {
@@ -250,131 +150,209 @@ public class CgUnionProductStatisticsService {
                     filterIds = searchData.getDocuments().stream().map(CarAlimamaUnionProductIndex::getId).collect(Collectors.toList());
                 }
             }
-            List<String> products = new ArrayList<>();
-            /**
-             * 雷米高猫咪维生素b防掉毛营养补充剂（取短标题）
-             * 券后 6.9，该商品当前低于去年促销价
-             * (1QPqdrTpwjg)/ HU89
-             */
-            String formatProduct = "%s\n券后 %s，%s\n%s\n";
+
             if (searchData != null && CollectionUtils.isNotEmpty(searchData.getDocuments())) {
                 List<Long> ids = searchData.getDocuments().stream().map(CarAlimamaUnionProductIndex::getId).toList();
 
-                products = processProduct(searchData.getDocuments());
+                Content content = processProductProps(searchData, mappingDO);
                 filterIds.addAll(ids);
                 filterIds = filterIds.stream().distinct().collect(Collectors.toList());
                 cacheService.set(key, JsonUtils.toJSONString(filterIds));
-                cacheService.expire(key, 3600);
-            }
-            if (CollectionUtils.isEmpty(products)) {
-                continue;
-            }
-            String title = String.format(titleFormat, mappingDO.getName());
-            String builder = title + "\n\n" +
-                    StringUtils.join(products, "\n") + "\n\n";
+                // 半天
+                cacheService.expire(key, 43200);
 
-            stepList.add(builder);
+                if (StringUtils.isBlank(content.getText())) {
+                    continue;
+                }
+
+                contents.add(content);
+
+            }
+        }
+
+        if (CollectionUtils.isEmpty(contents)) {
+            return;
         }
 
         // 在库商品数
         List<Long> totalNum = getTotalNum();
         long passProductNum = totalNum.get(0);
         long saleProductNum = totalNum.get(1);
+        long todayGoodProductNum = totalNum.get(2);
+        long totalGoodProductNum = totalNum.get(3);
 
-        StringBuilder header = new StringBuilder();
+
         // 【早安】，送上今日猫车精选播报：
         //今日在库商品：32564件，精选上架商品：1543件
-        header.append("【").append(sayHi()).append("】").append("，送上今日猫车精选播报：\n");
-        header.append("今日在库商品：").append(passProductNum).append("件，精选上架商品：").append(saleProductNum).append("件\n\n");
+        String header = sayHi() + "，送上“今日有好价”播报\n" +
+                "功能说明：\n" +
+                "推送今日获取到的所有近期低价，低于同款商品低价或低于去年促销价的商品，店铺均分≥4.8\n" +
+                "有好价商品：共计" + totalGoodProductNum + "件，今日新增：" + todayGoodProductNum + "件\n";
 
-        StringBuilder tail = new StringBuilder();
-        tail.append("更多好物，欢迎群内@猫车选品官，带上关键词即可，\n找券/答疑@猫车小助手");
-
-        send(header.toString(), tail.toString(), stepList);
-
-        return;
+        simpleSend(header, "更多好物，欢迎群内@猫车选品官，带上关键词即可\n找券/答疑@猫车小助手", contents);
     }
 
-    private List<String> processProduct(List<CarAlimamaUnionProductIndex> indices) {
+    private Content processProductProps(ElasticSearchData<CarAlimamaUnionProductIndex, CatProductBucketTO> searchData, MaocheCategoryMappingDO mappingDO) {
 
-        List<Long> ids = indices.stream().map(CarAlimamaUnionProductIndex::getId).toList();
+        Content content = new Content();
 
-        MaocheAlimamaUnionProductDO query = new MaocheAlimamaUnionProductDO();
-        query.setIid_in(ids.toArray(Long[]::new));
-        List<MaocheAlimamaUnionProductDO> productDOs = maocheAlimamaUnionProductDao.findList(query);
-        Map<Long, MaocheAlimamaUnionProductDO> productDOMap = productDOs.stream().collect(Collectors.toMap(MaocheAlimamaUnionProductDO::getIid, Function.identity(), (o1, o2) -> o1));
+        List<CarAlimamaUnionProductIndex> indices = searchData.getDocuments();
 
-        List<String> itemIdSuffixs = productDOs.stream().map(MaocheAlimamaUnionProductDO::getItemIdSuffix).collect(Collectors.toList());
-        List<MaocheAlimamaUnionGoodPriceDO> priceDOs = maocheAlimamaUnionGoodPriceService.listByItemIdSuffixs(itemIdSuffixs);
-        Map<String, MaocheAlimamaUnionGoodPriceDO> goodProductMap = priceDOs.stream().collect(Collectors.toMap(MaocheAlimamaUnionGoodPriceDO::getItemIdSuffix, Function.identity(), (o1, o2) -> o1));
+//        List<Long> ids = indices.stream().map(CarAlimamaUnionProductIndex::getId).toList();
+
+//        MaocheAlimamaUnionProductDO query = new MaocheAlimamaUnionProductDO();
+//        query.setIid_in(ids.toArray(Long[]::new));
+//        List<MaocheAlimamaUnionProductDO> productDOs = maocheAlimamaUnionProductDao.findList(query);
+//        Map<Long, MaocheAlimamaUnionProductDO> productDOMap = productDOs.stream().collect(Collectors.toMap(MaocheAlimamaUnionProductDO::getIid, Function.identity(), (o1, o2) -> o1));
+//
+//        List<String> itemIdSuffixs = productDOs.stream().map(MaocheAlimamaUnionProductDO::getItemIdSuffix).collect(Collectors.toList());
+//        List<MaocheAlimamaUnionGoodPriceDO> priceDOs = maocheAlimamaUnionGoodPriceService.listByItemIdSuffixs(itemIdSuffixs);
+//        Map<String, MaocheAlimamaUnionGoodPriceDO> goodProductMap = priceDOs.stream().collect(Collectors.toMap(MaocheAlimamaUnionGoodPriceDO::getItemIdSuffix, Function.identity(), (o1, o2) -> o1));
 
 
-        List<String> products = new ArrayList<>();
-
-        String formatProduct = "%s\n券后 %s%s\n%s\n";
+        // 有好价猫粮158件，包含品牌：高爷家，渴望，网易严选，花麻麻...等，包含产品：身份牌，猫粮，冻干，罐头...等
+        String formatProduct = "有好价%s%d件，包含品牌：%s...等，包含产品：%s...等\n";
+        String formatProduct2 = "有好价%s%d件，包含品牌：%s...等\n";
+        List<String> brands = new ArrayList<>();
+        List<String> productNames = new ArrayList<>();
         for (CarAlimamaUnionProductIndex index : indices) {
-            MaocheAlimamaUnionProductDO unionProductDO = productDOMap.get(index.getId());
-            String shortTitle = ProductValueHelper.getShortTitle(JSONObject.parseObject(unionProductDO.getOrigContent()));
-            String title = index.getTitle();
-            if (StringUtils.isNotBlank(shortTitle)) {
-                title = shortTitle;
+            if (StringUtils.isNotBlank(index.getPropsBrand())) {
+                brands.add(index.getPropsBrand());
             }
-            String goodPriceType = "";
-            MaocheAlimamaUnionGoodPriceDO goodPrice = goodProductMap.get(unionProductDO.getItemIdSuffix());
-            try {
-                if (goodPrice != null) {
-                    goodPriceType = JSONObject.parseObject(goodPrice.getContent()).getString("goodPriceType");
-                    goodPriceType = "，该商品当前" + goodPriceType;
-                }
-            } catch (Exception e) {
-                log.error("每日推荐，解析有好价失败 goodPrice:{}", JsonUtils.toJSONString(goodPrice), e);
+            if (StringUtils.isNotBlank(index.getPropsProductName())) {
+                productNames.add(index.getPropsProductName());
             }
+        }
+        String categoryName = mappingDO.getName();
 
-            // 获取口令
-            String apiUrl = cgUnionProductService.getEApiUrl("V73687541H40026415", unionProductDO.getItemId(), "mm_30153430_909250463_109464700418");
-            products.add(String.format(formatProduct, title, formatPrice(index.getPromotionPrice()), goodPriceType, apiUrl));
+        String text = null;
+        brands = brands.stream().distinct().collect(Collectors.toList());
+        productNames = productNames.stream().distinct().collect(Collectors.toList());
+        if (CollectionUtils.isEmpty(productNames)) {
+            text = String.format(formatProduct2, categoryName, searchData.getTotal(), StringUtils.join(brands, "，"));
+        } else {
+            text = String.format(formatProduct, categoryName, searchData.getTotal(), StringUtils.join(brands, "，"), StringUtils.join(productNames, "，"));
         }
 
-        return products;
+        String cardTitle = "猫车® 今日" + categoryName + "有好价" + searchData.getTotal() + "件";
+
+        String title = "今日" + categoryName + "有好价";
+
+        content.setText(text);
+        content.setCardTitle(cardTitle);
+        content.setCardContent("每日更新当天低价优质品，放心买，便宜买。");
+        content.setCardThumburl("https://mmbiz.qpic.cn/sz_mmbiz_png/y7ibJn5iaZcWBicu2ewoJaiazq2q7ot0szXMAw3JaQlBFH3QPk2oicR5SdlVNbwlkGbZ6ooatibEuOWgjQzSGWvTFusA/640?wx_fmt=png");
+        content.setCardUrl("https://cat.zhizher.com/cat-sass-mobile/#/pages/sys/good_price/index?cidOne=" + mappingDO.getId() +"&title="+ EncodeUtils.encodeUrl(title));
+
+        return content;
     }
 
-    private void send(String header, String tail, List<String> products) {
-        if (CollectionUtils.isEmpty(products)) {
+    private void simpleSend(String header, String tail, List<Content> contents) {
+        if (CollectionUtils.isEmpty(contents)) {
             return;
         }
-        int size = products.size();
 
-        for (int i = 0; i < size; i++) {
-            String content = "";
-            if (i == 0) {
-                content = header;
-            }
-            content += products.get(i);
-            if (i == size - 1) {
-                content += tail;
-            }
-            qwService.send(UNIQUE_ID, textMap(content));
-            try {
-                Thread.sleep(3000);
-            } catch (Exception e) {
+        // 获取所有的群
+        List<QwChatroomInfoDO> qwChatroomInfoDOS = qwChatroomInfoService.listByOwnerId("1688856684429282");
 
+        try {
+            for (QwChatroomInfoDO qwChatroomInfoDO : qwChatroomInfoDOS) {
+//                if (!qwChatroomInfoDO.getId().equals("68")) {
+//                    continue;
+//                }
+                String roomChatId = qwChatroomInfoDO.getRoomChatId();
+                qwService.send(UNIQUE_ID, textMap(header, roomChatId));
+                Thread.sleep(3500);
+
+                for (Content content : contents) {
+
+                    qwService.send(UNIQUE_ID, textMap(content.getText(), roomChatId));
+                    Thread.sleep(5000);
+
+                    // 发送卡片
+                    qwService.send(UNIQUE_ID, cardMap(content, roomChatId));
+                    Thread.sleep(3000);
+                }
+
+                qwService.send(UNIQUE_ID, textMap(tail, roomChatId));
             }
+
+
+        } catch (Exception e) {
+
         }
     }
 
-    private Map<String, Object> textMap(String content) {
+    @Data
+    private static class Content implements Serializable {
+
+        @Serial
+        private static final long serialVersionUID = -4596032074436111834L;
+
+        // 今日上午有好价猫砂158件，包含品牌：高爷家，渴望，网易严选，花麻麻...等，包含产品：身份牌，猫粮，冻干，罐头...等
+        private String text;
+
+        private String cardTitle;
+
+        private String cardContent;
+
+        private String cardThumburl;
+
+        private String cardUrl;
+
+
+    }
+
+    private Map<String, Object> textMap(String content, String rid) {
         Map<String, Object> msg = new HashMap<>();
         Map<String, Object> data = new HashMap<>();
-        data.put("conversation_id", "R:10798108093991504");
+
+        data.put("conversation_id", rid);
         data.put("content", content);
         data.put("request_key", "AAAAAA");
-//        data.put("thumburl", "thumburl");
-//        data.put("title", "tttt title");
-//        data.put("url", "www.baidu.com");
+
         msg.put("data", data);
         msg.put("type", 5000);
 
         return msg;
+    }
+
+    private Map<String, Object> cardMap(Content content, String rid) {
+        Map<String, Object> msg = new HashMap<>();
+        Map<String, Object> data = new HashMap<>();
+
+        data.put("conversation_id", rid);
+        data.put("desc", content.getCardContent());
+        data.put("request_key", "AAAAAA");
+        data.put("thumburl", content.getCardThumburl());
+        data.put("title", content.getCardTitle());
+        data.put("url", content.getCardUrl());
+        msg.put("data", data);
+        msg.put("type", 5007);
+
+        return msg;
+    }
+
+     private Map<String, Object> buildCardMap(Map<String, Object> data, String rid) {
+        Map<String, Object> msg = new HashMap<>();
+
+        msg.put("data", data);
+        msg.put("type", 5007);
+
+        return msg;
+    }
+
+    private Map<String, Object> buildCardDataMap(String desc, String thumburl, String title, String url, String rid) {
+        Map<String, Object> data = new HashMap<>();
+
+        data.put("conversation_id", rid);
+        data.put("desc", desc);
+        data.put("request_key", "AAAAAA");
+        data.put("thumburl", thumburl);
+        data.put("title", title);
+        data.put("url", url);
+
+        return data;
     }
 
     private List<Long> getTotalNum() {
@@ -383,6 +361,8 @@ public class CgUnionProductStatisticsService {
         // 在库商品数
         long passProductNum = 0;
         long saleProductNum = 0;
+        long totalGoodProductNum = 0;
+        long todayGoodProductNum = 0;
 
         int passStatus = AuditStatusEnum.PASS.getStatus();
         long saleStatus = SaleStatusEnum.ON_SHELF.getStatus();
@@ -401,6 +381,7 @@ public class CgUnionProductStatisticsService {
         }
 
         condition.setSaleStatus(saleStatus);
+        condition.setHadRates(true);
         // 获取总数量
         searchData = cgUnionProductService.searchProduct(condition,
                 null,
@@ -411,72 +392,52 @@ public class CgUnionProductStatisticsService {
             saleProductNum = searchData.getTotal();
         }
 
-        numResult.add(passProductNum);
-        numResult.add(saleProductNum);
-
-        return numResult;
-    }
-
-    /**
-     * 今日新上架金选商品
-     *
-     */
-    private List<String> todayNew() {
-
-        // 今日上架精选
         long starTime = DateTimeUtils.earliestTimeToday(System.currentTimeMillis());
-        int passStatus = AuditStatusEnum.PASS.getStatus();
-        long saleStatus = SaleStatusEnum.ON_SHELF.getStatus();
+        CatUnionProductCondition goodCondition = new CatUnionProductCondition();
 
-        List<String> sorts = new ArrayList<>();
-        sorts.add("catDsr desc");
+        Long nDay = 86400L * 3L * 1000L;
+        // 全部有好价
+        goodCondition.setAuditStatus(passStatus);
+        goodCondition.setGteShopDsr(48000);
+        // 5%
+        goodCondition.setGteCommissionRate(500L);
+        goodCondition.setGteUpdateTime(System.currentTimeMillis() - nDay);
+        goodCondition.setGteCouponRemainCount(1L);
+        goodCondition.setHadRates(true);
 
-        CatUnionProductCondition condition = new CatUnionProductCondition();
-        condition.setAuditStatus(passStatus);
-        condition.setSaleStatus(saleStatus);
-        // todo 放开
-        condition.setGteCreateTime(starTime);
-        condition.setSorts(sorts);
-
+        goodCondition.setActivity(Collections.singletonList(CatActivityEnum.GOOD_PRICE.getActivity()));
         // 获取总数量
-        ElasticSearchData<CarAlimamaUnionProductIndex, CatProductBucketTO> searchData = cgUnionProductService.searchProduct(condition,
+        searchData = cgUnionProductService.searchProduct(goodCondition,
                 null,
                 0,
-                3);
+                0);
 
-        if (searchData == null || searchData.getTotal() <= 0) {
-            // 查询今日更新的
-            condition.setGteUpdateTime(null);
-            // todo 放开
-            condition.setGteCreateTime(starTime);
-            searchData = cgUnionProductService.searchProduct(condition,
-                    null,
-                    0,
-                    20);
+        if (searchData != null) {
+            totalGoodProductNum = searchData.getTotal();
         }
 
-        if (searchData == null || CollectionUtils.isEmpty(searchData.getDocuments())) {
-            return null;
-        }
-        MaocheAlimamaUnionProductDO query = new MaocheAlimamaUnionProductDO();
-        query.setIid_in(searchData.getDocuments().stream().map(CarAlimamaUnionProductIndex::getId).toArray(Long[]::new));
-        List<MaocheAlimamaUnionProductDO> products = maocheAlimamaUnionProductDao.findList(query);
-        Map<Long, MaocheAlimamaUnionProductDO> productDOMap = products.stream().collect(Collectors.toMap(MaocheAlimamaUnionProductDO::getIid, Function.identity(), (o1, o2) -> o1));
+        // 今日有好价
+        goodCondition.setGteShopDsr(null);
+        goodCondition.setGteCreateTime(starTime);
+        goodCondition.setGteCommissionRate(null);
+        goodCondition.setGteCouponRemainCount(null);
+        goodCondition.setHadRates(null);
+        // 获取总数量
+        searchData = cgUnionProductService.searchProduct(goodCondition,
+                null,
+                0,
+                0);
 
-        List<String> msg = new ArrayList<>();
-        String format = "%s，券后 %s，%s";
-        List<CarAlimamaUnionProductIndex> items = searchData.getDocuments().subList(0, Math.min(searchData.getDocuments().size(), 3));
-        for (CarAlimamaUnionProductIndex index : items) {
-
-            MaocheAlimamaUnionProductDO unionProductDO = productDOMap.get(index.getId());
-
-            // 获取口令
-            String apiUrl = cgUnionProductService.getEApiUrl("V73687541H40026415", unionProductDO.getItemId(), "mm_30153430_909250463_109464700418");
-
-             msg.add(String.format(format, index.getTitle(), formatPrice(index.getPromotionPrice()), apiUrl));
+        if (searchData != null) {
+            todayGoodProductNum = searchData.getTotal();
         }
 
-        return msg;
+        numResult.add(passProductNum);
+        numResult.add(saleProductNum);
+        numResult.add(todayGoodProductNum);
+        numResult.add(totalGoodProductNum);
+
+        return numResult;
     }
 
     private static String formatPrice(Long price) {
@@ -501,172 +462,174 @@ public class CgUnionProductStatisticsService {
     }
 
     public static void main(String[] args) {
-        int pageId = 1;
-        int pageSize = 20;
-        long total = 40;
-        System.out.println(total / pageSize);
+
+        long starTime = DateTimeUtils.earliestTimeToday(System.currentTimeMillis());
+
+        System.out.println(starTime);
 
     }
 
-    // 获取所有的历史低价商品
+    public void nineRcmd() {
+        CatUnionProductCondition condition = ProductSearchHelper.buildNineSearchCondition();
 
-    public List<String> getHistoryLowPriceList() {
-        int pageId = 1;
-        int pageSize = 20;
-        String cids = "4";
+        List<Long> nineNumMap = getNineNum(condition);
+        long totalNum = nineNumMap.get(0);
+        long todayNum = nineNumMap.get(1);
 
-        DaTaoKeResponse<Object> historyLowPriceList = daTaoKeApiService.getHistoryLowPriceList("647802ed3a2b4", "v1.0.0", pageSize, pageId, cids, "0");
+        Map<Long, Integer> categoryNumMap = new HashMap<>();
+        /**
+         * 1,0,驱虫保健,1
+         * 23,0,猫砂,1
+         * 25,0,猫咪用品,1
+         * 50,0,猫粮,1
+         */
+        categoryNumMap.put(1L, 2);
+        categoryNumMap.put(25L, 2);
+        categoryNumMap.put(23L, 4);
+        categoryNumMap.put(50L, 4);
 
-        long total = DaTaoKeResponseHelper.getHistoryLowPriceTotal(JsonUtils.toJSONString(historyLowPriceList.getData()));
-        // 获取需要翻页的总数
-        if (total <= 0) {
-            return new ArrayList<>();
-        }
-        List<Long> historyLowPriceIds = DaTaoKeResponseHelper.getHistoryLowPriceIds(JsonUtils.toJSONString(historyLowPriceList.getData()));
-        if (CollectionUtils.isEmpty(historyLowPriceIds)) {
-            log.error("解析大淘客的历史低价商品接口异常，无法获取大淘客id, historyLowPriceList:{}", JsonUtils.toJSONString(historyLowPriceList));
-            return new ArrayList<>();
-        }
+        List<String> sorts = new ArrayList<>(Collections.singletonList("shopDsr desc"));
+        condition.setSorts(sorts);
 
+        List<MaocheCategoryMappingDO> roots = maocheCategoryMappingService.getCategoryFromCache(0L);
 
-        long totalSize = total / pageSize + 1;
-        for (int i = 2; i <= totalSize; i++) {
-            historyLowPriceList = daTaoKeApiService.getHistoryLowPriceList("647802ed3a2b4", "v1.0.0", pageSize, i, cids, "0");
-
-            List<Long> ids = DaTaoKeResponseHelper.getHistoryLowPriceIds(JsonUtils.toJSONString(historyLowPriceList.getData()));
-            if (CollectionUtils.isEmpty(ids)) {
+        List<String> items = new ArrayList<>();
+        for (MaocheCategoryMappingDO mappingDO : roots) {
+            List<MaocheCategoryMappingDO> subCategories = maocheCategoryMappingService.getCategoryFromCache(mappingDO.getIid());
+            if (CollectionUtils.isEmpty(subCategories)) {
                 continue;
             }
-            historyLowPriceIds.addAll(ids);
-        }
 
-        List<MaocheDataokeProductDO> daTaoKeProducts = new ArrayList<>();
+            Integer size = categoryNumMap.get(mappingDO.getIid());
+            List<String> categoryNames = subCategories.stream().map(MaocheCategoryMappingDO::getName).toList();
+            condition.setCategoryNames(categoryNames);
 
-        List<List<Long>> partition = Lists.partition(historyLowPriceIds, 20);
-        for (List<Long> p : partition) {
-            // 分批查询
-            MaocheDataokeProductDO query = new MaocheDataokeProductDO();
-            query.setDtkId_in(p.toArray(new Long[0]));
-            query.setStatus("NORMAL");
-            List<MaocheDataokeProductDO> list = maocheDataokeProductDao.findList(query);
-            if (CollectionUtils.isNotEmpty(list)) {
-                daTaoKeProducts.addAll(list);
+            SearchSourceBuilder source = cgUnionProductService.searchSource(condition, null, cgUnionProductService::commonSort, null, 0, 20);
+            ElasticSearchData<CarAlimamaUnionProductIndex, CatProductBucketTO> searchData = cgUnionProductService.search(source);
+
+            if (searchData == null || CollectionUtils.isEmpty(searchData.getDocuments())) {
+                continue;
             }
-        }
 
-        List<String> innerIds = daTaoKeProducts.stream().map(MaocheDataokeProductDO::getId).collect(Collectors.toList());
-        // 查询在union_product中也存在的商品
-        List<MaocheAlimamaUnionProductDO> productDOs = maocheAlimamaUnionProductService.listByMaocheInnerIds(innerIds,
-                ProductDataSource.DATAOKE,
-                "宠物/宠物食品及用品",
-                "NORML");
-        List<MaocheAlimamaUnionProductDO> searchProducts = new ArrayList<>();
-        List<Long> productIds = new ArrayList<>();
-        if (CollectionUtils.isNotEmpty(productDOs)) {
-            // 过滤掉无效的商品
-            for (MaocheAlimamaUnionProductDO product : productDOs) {
-                if (!"NORMAL".equals(product.getStatus())) {
+            int i = 0;
+            Collections.shuffle(searchData.getDocuments());
+            for (CarAlimamaUnionProductIndex product : searchData.getDocuments()) {
+                if (i >= size) {
+                    break;
+                }
+                String name = product.getPropsBrand();
+                if (StringUtils.isBlank(name) || name.equalsIgnoreCase("other")) {
                     continue;
                 }
-                if (product.getAuditStatus() == null || product.getSaleStatus() == null) {
-                    continue;
+                if (StringUtils.isNotBlank(product.getPropsProductName())) {
+                    name += product.getPropsProductName();
                 }
-                if (!SaleStatusEnum.ON_SHELF.getStatus().equals(product.getSaleStatus())) {
-                    continue;
+                String priceTitle = "现价";
+                if (product.getCoupon() != null && product.getCoupon() > 0 && product.getCouponRemainCount() != null && product.getCouponRemainCount() > 0) {
+                    priceTitle = "券后";
                 }
-                if (AuditStatusEnum.PASS.getStatus() != product.getAuditStatus().intValue()) {
-                    continue;
-                }
-
-                productIds.add(product.getIid());
-                searchProducts.add(product);
+                name += priceTitle + PriceHelper.formatPrice(product.getPromotionPrice(), ".00", "") + "元";
+                items.add(name);
+                i++;
             }
         }
-
-        if (CollectionUtils.isEmpty(searchProducts)) {
-            return new ArrayList<>();
+        if (CollectionUtils.isEmpty(items)) {
+            return;
         }
 
-        Map<Long, MaocheAlimamaUnionProductDO> productDOMap = searchProducts.stream().collect(Collectors.toMap(MaocheAlimamaUnionProductDO::getIid, Function.identity(), (o1, o2) -> o1));
+        /**
+         * 送上今日“9.9精选“”播报
+         * 功能说明：
+         * 推送获取到价格≤9.9元，店铺均分≥4.8的精选商品
+         * 共计267件，今日新增：58件
+         */
+        StringBuilder header = new StringBuilder();
+        header.append("送上今日“9.9精选“”播报\n");
+        header.append("功能说明：\n");
+        header.append("推送获取到价格≤9.9元，店铺均分≥4.8的精选商品\n");
+        header.append("共计").append(totalNum).append("件，今日新增：").append(todayNum).append("件\n");
 
-        List<CarAlimamaUnionProductIndex> indices = new ArrayList<>();
-        // 获取到所有的id，然后查询es，每100个id查询一次
-        List<List<Long>> pids = Lists.partition(productIds, 100);
-        for (List<Long> p : pids) {
-            BoolQueryBuilder queryBuilder = new BoolQueryBuilder();
-            queryBuilder.must(QueryBuilders.termsQuery("id", productIds));
-            queryBuilder.must(QueryBuilders.termQuery("saleStatus", SaleStatusEnum.ON_SHELF.getStatus()));
-            queryBuilder.must(QueryBuilders.termQuery("auditStatus", AuditStatusEnum.PASS.getStatus()));
-            SearchSourceBuilder searchSourceBuilder = new SearchSourceBuilder();
-            searchSourceBuilder.from(0)
-                    .size(p.size())
-                    .query(queryBuilder);
+        StringBuilder content = new StringBuilder();
+        content.append("包含以下商品：\n\n");
+        content.append(StringUtils.join(items, "\n"));
+        content.append("\n.... \n\n").append("更多今日低价欢迎点击以下专题页获取\n");
 
-            ElasticSearchData<CarAlimamaUnionProductIndex, Object> searchData = elasticSearch7Service.search(searchSourceBuilder,
-                    ElasticSearchIndexEnum.CAT_PRODUCT_INDEX,
-                    null,
-                    CatRobotHelper::convertUnionProduct,
-                    null);
+        String title = "猫车® 今日9.9精选" + totalNum + "件，新增" + todayNum + "件";
+        Map<String, Object> cardMap = buildCardDataMap("精选店铺评分4.8分以上猫咪优质好物，帮您省心买",
+                "https://mmbiz.qpic.cn/sz_mmbiz_png/y7ibJn5iaZcWBicu2ewoJaiazq2q7ot0szXMAw3JaQlBFH3QPk2oicR5SdlVNbwlkGbZ6ooatibEuOWgjQzSGWvTFusA/640?wx_fmt=png",
+                title,
+                "https://cat.zhizher.com/cat-sass-mobile/#/pages/sys/goods/index",
+                null);
 
-            if (searchData == null || searchData.getTotal() <= 0) {
-                continue;
-            }
-            indices.addAll(searchData.getDocuments());
-        }
+        String tail = "更多好物好价，欢迎群内@猫车选品官，带上关键词即可找券/答疑@猫车小助手\n";
 
-        // 按照字段排序
-        indices.sort(new Comparator<CarAlimamaUnionProductIndex>() {
-            @Override
-            public int compare(CarAlimamaUnionProductIndex o1, CarAlimamaUnionProductIndex o2) {
-                return (int) (o2.getCatDsr() - o1.getCatDsr());
-            }
-        });
-
-        List<String> msg = new ArrayList<>();
-
-//        indices = indices.subList(0, Math.min(indices.size(), 10));
-        Map<String, MaocheDataokeProductDO> dataokeProductDOMap = daTaoKeProducts.stream().collect(Collectors.toMap(MaocheDataokeProductDO::getId, Function.identity(), (o1, o2) -> o1));
-        int i = 3;
-        String format = "%s，券后 %s，%s";
-
-        for (CarAlimamaUnionProductIndex index : indices) {
-
-            MaocheAlimamaUnionProductDO unionProductDO = productDOMap.get(index.getId());
-            if (unionProductDO == null) {
-                continue;
-            }
-            MaocheDataokeProductDO maocheDataokeProductDO = dataokeProductDOMap.get(unionProductDO.getMaocheInnerId());
-            if (maocheDataokeProductDO == null) {
-                continue;
-            }
-            if (msg.size() >= i) {
-                continue;
-            }
-            // 获取dtitle
-            String dTitle = index.getTitle();
-            String origContent = maocheDataokeProductDO.getOrigContent();
-            if (StringUtils.isNotBlank(origContent)) {
-                try {
-                    JSONObject jsonObject = JSONObject.parseObject(origContent);
-                    if (jsonObject != null && jsonObject.get("dtitle") != null) {
-                        String tmp = jsonObject.getString("dTitle");
-                        if (StringUtils.isNotBlank(tmp)) {
-                            dTitle = tmp;
-                        }
-
-                    }
-                } catch (Exception e) {
-
-                }
-            }
-
-            // 获取口令
-            String apiUrl = cgUnionProductService.getEApiUrl("V73687541H40026415", unionProductDO.getItemId(), "mm_30153430_909250463_109464700418");
-
-            msg.add(String.format(format, dTitle, formatPrice(index.getPromotionPrice()), apiUrl));
-        }
-
-        return msg;
+        sendNine(header.toString(), tail, content.toString(), cardMap);
     }
 
+    private List<Long> getNineNum(CatUnionProductCondition baseCondition) {
+
+        long totalNum = 0;
+        long todayNum = 0;
+
+        SearchSourceBuilder source = cgUnionProductService.searchSource(baseCondition, null, cgUnionProductService::commonSort, null, 0, 1);
+        ElasticSearchData<CarAlimamaUnionProductIndex, CatProductBucketTO> searchData = cgUnionProductService.search(source);
+
+        if (searchData != null) {
+            totalNum = searchData.getTotal();
+        }
+
+        // 今日新增
+        long starTime = DateTimeUtils.earliestTimeToday(System.currentTimeMillis());
+        baseCondition.setGteCreateTime(starTime);
+
+        source = cgUnionProductService.searchSource(baseCondition, null, cgUnionProductService::commonSort, null, 0, 1);
+        searchData = cgUnionProductService.search(source);
+
+        if (searchData != null) {
+            todayNum = searchData.getTotal();
+        }
+
+        // 清空
+        baseCondition.setGteCreateTime(null);
+
+        List<Long> num = new ArrayList<>();
+        num.add(totalNum);
+        num.add(todayNum);
+
+        return num;
+    }
+
+    private void sendNine(String header, String tail, String content, Map<String, Object> baseCardMap) {
+        if (StringUtils.isBlank(content)) {
+            return;
+        }
+
+        // 获取所有的群
+        List<QwChatroomInfoDO> qwChatroomInfoDOS = qwChatroomInfoService.listByOwnerId("1688856684429282");
+
+        try {
+            for (QwChatroomInfoDO qwChatroomInfoDO : qwChatroomInfoDOS) {
+                if (!qwChatroomInfoDO.getId().equals("68")) {
+                    continue;
+                }
+                String roomChatId = qwChatroomInfoDO.getRoomChatId();
+                qwService.send(UNIQUE_ID, textMap(header, roomChatId));
+                Thread.sleep(3500);
+
+                qwService.send(UNIQUE_ID, textMap(content, roomChatId));
+                Thread.sleep(3000);
+
+                baseCardMap.put("conversation_id", roomChatId);
+                // 发送卡片
+                qwService.send(UNIQUE_ID, buildCardMap(baseCardMap, roomChatId));
+                Thread.sleep(3000);
+
+                qwService.send(UNIQUE_ID, textMap(tail, roomChatId));
+                Thread.sleep(3000);
+            }
+
+        } catch (Exception e) {
+
+        }
+    }
 }
